# api/docs/swagger.json
@@ -1983,6 +1983,89 @@
                 }
             }
         },
+        "/order_item/totalSum": {
+            "post": {
+                "description": "Order Total Sum",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Order"
+                ],
+                "summary": "OrderTotalSum",
+                "operationId": "get_order_total_sum",
+                "parameters": [
+                    {
+                        "description": "DeleteOrderItemRequest",
+                        "name": "ordertotalsum",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.OrdeerTotalSum"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success Request",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Server Error",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/order_item/{id}": {
             "delete": {
                 "description": "Delete Order Item",
@@ -4713,6 +4796,17 @@
                 }
             }
         },
+        "models.OrdeerTotalSum": {
+            "type": "object",
+            "properties": {
+                "order_id": {
+                    "type": "integer"
+                },
+                "promo_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.OrderItemPrimaryKey": {
             "type": "object",
             "properties": {
@@ -4779,7 +4873,7 @@
         "models.TransferStock": {
             "type": "object",
             "properties": {
-                "fromStock_id": {
+                "fromStore_id": {
                     "type": "integer"
                 },
                 "product_id": {
@@ -4788,7 +4882,7 @@
                 "quantity": {
                     "type": "integer"
                 },
-                "toStock_id": {
+                "toStore_id": {
                     "type": "integer"
                 }
             }
